Fix to overflow main

--- a/HTML/assets/css/1-tools/_body-element.scss
+++ b/HTML/assets/css/1-tools/_body-element.scss
@@ -76,6 +76,11 @@ body {
         padding-right: 20px;
     }
 }
+.main{
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
 
 
 /* ==========================================================================
