--- a/HTML/assets/css/style.css
+++ b/HTML/assets/css/style.css
@@ -628,6 +628,12 @@ body {
   }
 }
 
+.main {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
